fixes image stretching

--- a/src/App.css
+++ b/src/App.css
@@ -950,4 +950,9 @@ a {
     cursor: pointer;
     transform: scale(1.2);
   }
+
+  .aboutImgContainer {
+    height: auto;
+    object-fit: cover;
+  }
 }
